--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,7 +22,7 @@
     "@babel/runtime": "^7.12.1",
     "@liquality/crypto": "^1.11.2",
     "@liquality/errors": "^1.11.2",
-    "@liquality/types": "^1.11.2",
+    "@liquality/types": "file:../types",
     "setimmediate": "^1.0.5"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
