--- a/packages/wallet-provider/package.json
+++ b/packages/wallet-provider/package.json
@@ -22,7 +22,7 @@
     "@babel/runtime": "^7.12.1",
     "@liquality/errors": "^1.11.2",
     "@liquality/provider": "^1.11.2",
-    "@liquality/types": "^1.11.2",
+    "@liquality/types": "file:../types",
     "lodash": "^4.17.20"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
