--- a/packages/bitcoin-esplora-batch-api-provider/package.json
+++ b/packages/bitcoin-esplora-batch-api-provider/package.json
@@ -24,7 +24,7 @@
     "@liquality/node-provider": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "lodash": "^4.17.20"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
