--- a/packages/bitcoin-ledger-provider/package.json
+++ b/packages/bitcoin-ledger-provider/package.json
@@ -28,7 +28,7 @@
     "@liquality/ledger-provider": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bip32": "^2.0.6",
     "bitcoinjs-lib": "^5.2.0"
   },
