--- a/packages/bitcoin-node-wallet-provider/package.json
+++ b/packages/bitcoin-node-wallet-provider/package.json
@@ -27,7 +27,7 @@
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
     "@liquality/wallet-provider": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bitcoinjs-lib": "^5.2.0",
     "lodash": "^4.17.20"
   },
