--- a/packages/bitcoin-utils/package.json
+++ b/packages/bitcoin-utils/package.json
@@ -25,7 +25,7 @@
     "@liquality/errors": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bip174": "^2.0.1",
     "bitcoinjs-lib": "^5.2.0",
     "coinselect": "^3.1.11",
