--- a/packages/bitcoin-wallet-provider/package.json
+++ b/packages/bitcoin-wallet-provider/package.json
@@ -26,7 +26,7 @@
     "@liquality/provider": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bitcoinjs-lib": "^5.2.0",
     "memoizee": "^0.4.15"
   },
