--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,7 @@
     "@liquality/schema": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "ajv": "^6.10.0",
-    "bignumber.js": "^9.0.1",
+    "bignumber.js": "9.0.2",
     "debug": "^4.1.1",
     "lodash": "^4.17.20"
   },
