--- a/packages/ethereum-erc20-provider/package.json
+++ b/packages/ethereum-erc20-provider/package.json
@@ -26,7 +26,7 @@
     "@liquality/provider": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "lodash": "^4.17.20"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
