--- a/packages/near-rpc-provider/package.json
+++ b/packages/near-rpc-provider/package.json
@@ -27,7 +27,7 @@
     "@liquality/node-provider": "^1.11.2",
     "@liquality/types": "^1.11.2",
     "@liquality/utils": "^1.11.2",
-    "bignumber.js": "^9.0.1",
+    "bignumber.js": "9.0.2",
     "lodash": "^4.17.20"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
