--- a/packages/verus-node-wallet-provider/package.json
+++ b/packages/verus-node-wallet-provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liquality/verus-utils",
+  "name": "@liquality/verus-node-wallet-provider",
   "version": "1.11.2",
   "description": "",
   "module": "dist/index.js",
@@ -20,34 +20,30 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.12.1",
-    "@liquality/bitcoin-networks": "file:../bitcoin-networks",
     "@liquality/verus-networks": "file:../verus-networks",
+    "@liquality/verus-utils": "file:../verus-utils",
     "@liquality/crypto": "file:../crypto",
-    "@liquality/errors": "file:../errors",
+    "@liquality/jsonrpc-provider": "file:../jsonrpc-provider",
     "@liquality/types": "file:../types",
     "@liquality/utils": "file:../utils",
+    "@liquality/wallet-provider": "file:../wallet-provider",
     "bignumber.js": "9.0.2",
-    "bip174": "^2.0.1",
     "bitcoinjs-lib": "^5.2.0",
-    "coinselect": "^3.1.11",
-    "lodash": "^4.17.20",
-    "@bitgo/utxo-lib": "https://github.com/miketout/BitGoJS.git#utxo-lib-verus"
+    "lodash": "^4.17.20"
   },
-  "homepage": "https://github.com/miketout/chainabstractionlayer#readme",
+  "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miketout/chainabstractionlayer.git"
+    "url": "git+https://github.com/liquality/chainabstractionlayer.git"
   },
   "bugs": {
-    "url": "https://github.com/miketout/chainabstractionlayer/issues"
+    "url": "https://github.com/liquality/chainabstractionlayer/issues"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@types/bitcoinjs-lib": "^5.0.0",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31"
+    "@types/lodash": "^4.14.168"
   },
   "sideEffects": false
 }
