--- a/packages/verus-swap-provider/package.json
+++ b/packages/verus-swap-provider/package.json
@@ -28,7 +28,7 @@
     "@liquality/types": "file:../types",
     "@liquality/utils": "file:../utils",
     "@types/node": "^14.14.36",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bitcoinjs-lib": "^5.2.0"
   },
   "homepage": "https://github.com/liquality/chainabstractionlayer#readme",
