--- a/packages/verus-wallet-provider/package.json
+++ b/packages/verus-wallet-provider/package.json
@@ -26,7 +26,7 @@
     "@liquality/provider": "file:../provider",
     "@liquality/types": "file:../types",
     "@liquality/utils": "file:../utils",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.2",
     "bitcoinjs-lib": "^5.2.0",
     "memoizee": "^0.4.15"
   },
