--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "chainify",
     "version": "1.0.10",
     "devDependencies": {
+        "@bitgo/utxo-lib": "git+https://github.com/VerusCoin/BitGoJS.git#utxo-lib-verus",
         "@changesets/changelog-github": "^0.4.2",
         "@changesets/cli": "^2.20.0",
         "@commitlint/cli": "^16.1.0",
@@ -65,6 +66,7 @@
     ],
     "packageManager": "yarn@3.1.1",
     "resolutions": {
+        "bitcoin-ops": "git+https://github.com/VerusCoin/bitcoin-ops.git",
         "@ledgerhq/devices": "7.0.7",
         "@ledgerhq/hw-transport": "6.27.10",
         "@ledgerhq/hw-transport-webhid": "6.27.10",
