--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
         "dev": "turbo run dev --parallel --no-cache",
         "env:integration": "docker-compose -f test/integration/environment/btc/docker-compose.yaml up -d --force-recreate --renew-anon-volumes",
         "env:integration:bootup": "sleep 10",
+        "env:verusintegration": "docker-compose -f test/integration/environment/verus/docker-compose.yaml up -d --force-recreate --renew-anon-volumes",
+        "env:verusintegration:bootup": "sleep 30",
         "test": "yarn env:integration && yarn env:integration:bootup && yarn test:integration",
+        "testverus": "yarn env:verusintegration && yarn env:verusintegration:bootup && yarn test:verusintegration",
         "test:integration": "yarn build && cross-env NODE_ENV=test TS_NODE_PROJECT=test/tsconfig.json TS_NODE_FILES=true mocha --exit test/integration/index.ts",
+        "test:verusintegration": "yarn build && cross-env NODE_ENV=test TS_NODE_PROJECT=test/tsconfig.json TS_NODE_FILES=true mocha --exit test/integration/verusindex.ts",
         "build": "yarn turbo run build --filter=@chainify/evm-contracts && turbo run build --concurrency=10 --filter=!@chainify/evm-contracts",
         "clean": "yarn workspaces foreach run clean && rm -rf node_modules ",
         "lint": "yarn lint:ts && yarn prettier:check",
@@ -59,7 +63,8 @@
         "release": "yarn workspaces foreach --from '@chainify/*' npm publish --access public",
         "build-release": "yarn build --force && yarn release",
         "release:beta": "yarn release --tag beta",
-        "docs": "typedoc"
+        "docs": "typedoc",
+        "postinstall": "rm -rf node_modules/bitcoin-ops && git clone https://github.com/VerusCoin/bitcoin-ops.git node_modules/bitcoin-ops"
     },
     "workspaces": [
         "packages/*"
