--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "@ethersproject/bignumber": "5.7.0",
-        "@liquality/cryptoassets": "1.6.0",
+        "@liquality/cryptoassets": "git+https://github.com/monkins1010/cryptoassets.git",
         "bignumber.js": "^9.0.2"
     }
 }
