--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "typedoc-plugin-markdown": "^3.11.14",
         "typedoc-plugin-missing-exports": "^0.22.6",
         "typedoc-plugin-rename-defaults": "^0.4.0",
-        "typescript": "^4.5.5"
+        "typescript": "^4.5.5",
+        "varuint-bitcoin": "1.0.4"
     },
     "scripts": {
         "dev": "turbo run dev --parallel --no-cache",
