--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
         "@ledgerhq/hw-transport-webhid": "6.27.10",
         "@ledgerhq/cryptoassets": "7.3.0",
         "@ledgerhq/hw-app-eth": "6.30.5",
-        "@ledgerhq/hw-app-btc": "9.1.2",
-        "@liquality/cryptoassets": "git+https://github.com/monkins1010/cryptoassets.git"
+        "@ledgerhq/hw-app-btc": "9.1.2"
     }
 }
